# lseg_mcp

./: .gitattributes  .gitignore  README.md  architecture.md  job_info.txt  poll_gh.py  pyproject.toml  real_fields_report.txt  run_server.cmd  run_server.sh  test_popen.py  win_job_log.txt
.github/workflows/: ci.yml
R/: harvest_lseg_fields.R
data/: LSEG_Mapping.xlsx  real_fields_from_refinitivr.csv  real_fields_refinitivrapi_combined.csv  real_fields_refinitivrapi_report.txt  real_harvested_from_refinitivr.csv
scripts/: harvest_lseg_fields.py  harvest_real_fields_via_refinitivr.R  harvest_real_fields_via_refinitivrapi.R
src/lseg_mcp/: __init__.py  _paths.py  code_generator.py  data_dictionary.py  mapping_engine.py  package_indexer.py  rescan_manager.py  server.py
src/lseg_mcp/data/: sample_extended_fields.csv
tests/: conftest.py  generate_golden.py  test_code_generator.py  test_data_dictionary.py  test_golden.py  test_mapping_engine.py  test_package_indexer.py  test_paths.py  test_rescan_manager.py  test_server.py
tests/golden/: python_additive.txt  python_with_params.txt  r_simple.txt
